<resources>
    <string name="app_name">WanAndroid</string>
    <string name="string_home">Home</string>
    <string name="string_profile">Profile</string>
    <string name="string_qa">Q&amp;A</string>
    <string name="string_navigation">Navigation</string>
    <string name="string_coin">Coin</string>
    <string name="string_share">Share</string>
    <string name="string_collect">Collect</string>
    <string name="string_book_mark">BookMark</string>
    <string name="string_history">History</string>
    <string name="string_code">Open source projects</string>
    <string name="string_about">About</string>
    <string name="string_settings">Settings</string>
    <string name="string_change_theme">Change Theme</string>
    <string name="string_change_language">Change Language</string>
    <string name="string_logout">Logout</string>
    <string name="string_dark_theme">Dark Theme</string>
    <string name="string_light_theme">Light Theme</string>
    <string name="string_zh">Chinese</string>
    <string name="string_en">English</string>
    <string name="string_de">Deutsch</string>
    <string name="string_th">Thai</string>
    <string name="string_follow_system">Follow System</string>
    <string name="string_logout_title">Kind tips</string>
    <string name="string_logout_content">Are you sure you want to log out?</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_login">Login</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_message">Message</string>
    <string name="string_unread">Unread</string>
    <string name="string_read">Read</string>
    <string name="string_message_empty_unread">No unread messages</string>
    <string name="string_message_empty_read">No read messages</string>
    <string name="string_share_add">Add Share</string>
    <string name="string_share_title">Title</string>
    <string name="string_share_link">Link</string>
    <string name="string_share_empty">No shared articles yet</string>
    <string name="string_share_add_success">Share successful</string>
    <string name="string_share_add_invalid">Please input valid title and link</string>
    <string name="string_share_delete">Delete</string>
    <string name="string_share_delete_success">Delete successful</string>
    <string name="string_delete">Delete</string>
    <string name="string_history_empty">No reading history yet</string>
    <string name="string_search_hint">Search articles</string>
    <string name="string_clear">Clear</string>
    <string name="string_back">Back</string>
    <string name="string_search_empty">Enter keywords to search</string>
    <string name="string_search_no_result">No articles found</string>
    <string name="string_bookmark_add">Add bookmark</string>
    <string name="string_bookmark_edit">Edit bookmark</string>
    <string name="string_bookmark_name">Name</string>
    <string name="string_bookmark_link">Website URL</string>
    <string name="string_bookmark_empty">No bookmarks yet. Add a website to get started.</string>
    <string name="string_bookmark_name_invalid">Enter a name</string>
    <string name="string_bookmark_link_invalid">Enter a valid http:// or https:// URL</string>
    <string name="string_bookmark_load_failed">Could not load bookmarks. Please retry.</string>
    <string name="string_bookmark_save_failed">Could not save bookmark. Please retry.</string>
    <string name="string_bookmark_delete_failed">Could not delete bookmark. Please retry.</string>
    <string name="string_bookmark_delete_confirm">Delete bookmark “%1$s”?</string>
    <string name="string_bookmark_save">Save</string>
    <string name="string_bookmark_saving">Saving…</string>
    <string name="string_bookmark_deleting">Deleting…</string>
    <string name="string_bookmark_save_success">Bookmark saved</string>
    <string name="string_bookmark_delete_success">Bookmark deleted</string>
    <string name="string_bookmark_retry">Retry</string>
    <string name="string_bookmark_open_failed">Could not open this website</string>
    <string name="string_search_submit">Search</string>
    <string name="string_search_hot">Popular searches</string>
    <string name="string_search_hot_failed">Could not load popular searches</string>
    <string name="string_search_hot_empty">No popular searches available</string>
    <string name="string_search_failed">Search failed. Please retry.</string>
    <string name="string_search_retry">Retry</string>
    <string name="string_search_loading">Loading…</string>
    <string name="string_search_anonymous">Anonymous</string>
    <string name="string_bookmark_add_from_browser">Add to my bookmarks</string>
    <string name="string_bookmark_already_saved">Already in your bookmarks</string>
    <string name="string_bookmark_browser_failed">Could not add bookmark. Check your connection and sign-in status, then retry.</string>
</resources>
