...
            tags = listOf(
                Tag(
                    name = "Kotlin",
                    url = "https://www.wanandroid.com/tag/Kotlin"
                ),
                Tag(
                    name = "Android",
                    url = "https://www.wanandroid.com/tag/Kotlin"
                )
            ),
            niceDate = "2023-05-31",
        ),
        onCollectClick = {},
...
